--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<option value="countdown">Countdown</option>
 					<option value="add">Add</option>
 					<option value="reverse">Reverse</option>
+					<option value="mandelbrot">Mandelbrot</option>
 				</select>
 			</div>
 			<textarea id="slangOutput" class="area" wrap="off" placeholder="Output here" readonly></textarea>
