--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		</div>
 		<div class="flex container">
 			<h2>Demo</h2>
+			<h3>The demo is slower online than downloading the files and opening index.html on your computer.</h3>
 			<textarea id="slangCode" class="area" placeholder="Enter your code here. You can enter BrainF**k code and hit the convert button to convert it to SLang."></textarea>
 			<textarea id="slangInput" rows="1" placeholder="Input"></textarea>
 			<div class="flex">
