--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 		</div>
 		<div class="flex container">
 			<h2>Demo</h2>
-			<h3>The demo is slower online than downloading the files and opening index.html on your computer.</h3>
-			<!--lastpass-stop-search will stop lastpass from screwing with the textboxes, which causes a memory leak for some reason. -->
-			<textarea id="slangCode" class="area lastpass-stop-search" placeholder="Enter your code here. You can enter BrainF**k code and hit the convert button to convert it to SLang."></textarea>
-			<textarea id="slangInput" class="lastpass-stop-search" rows="1" placeholder="Input"></textarea>
+			<textarea id="slangCode" class="area" placeholder="Enter your code here. You can enter BrainF**k code and hit the convert button to convert it to SLang."></textarea>
+			<textarea id="slangInput" rows="1" placeholder="Input"></textarea>
 			<div class="flex">
 				<button id="runButton" onclick="run()">Run</button>
 				<button id="convertButton" onclick="convert()">Convert from BF</button>
@@ -29,9 +27,9 @@
 					<option value="mandelbrot">Mandelbrot</option>
 				</select>
 			</div>
-			<textarea id="slangOutput" class="area lastpass-stop-search" wrap="off" placeholder="Output here" readonly></textarea>
-			<h3>Debug output</h3>
-			<div id="debug">[]<br>[]</div>
+			<textarea id="slangOutput" class="area" wrap="off" placeholder="Output here" readonly></textarea>
+			<h3><input type="checkbox" id="enableDebug" onchange="changeDebug()"></input>Debug output</h3>
+			<textarea id="debug" readonly style="display: none" rows="20">index:0&#13;&#10;[0]&#13;&#10;['']</textarea>
 		</div>
 		<script src="slang.js"></script>
 	</body>
